ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
	# use your controller name.
  controller: k8s.io/ingress-nginx
