2.labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  labels:
    env: dev
    type: frontend
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
