3.nodeselector-low.yaml
apiVersion: v1
kind: Pod
metadata:
  name: low-spec-nginx
  labels:
    env: dev
    type: frontend
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
  nodeSelector:
    spec: low
