4nodeselector-high.yaml
apiVersion: v1
kind: Pod
metadata:
  name: high-spec-nginx
  labels:
    env: dev
    type: frontend
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
  nodeSelector:
    spec: high
