7clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    tier: frontend
    type: dev
  ports:
  - name: name-of-service-port
    port: 80
    targetPort: 80
