node-expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-expose-public
spec:
  selector:
    tier: front
    type: qa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000 # Assuming your application is running on port 3030
  type: NodePort
