nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    env: prod
    tier: front
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: front
      type: qa
  template:
    metadata:
      labels:
        tier: front
        type: qa
    spec:
      containers:
      - name: node-app
        image: nirav8miles/node-app:latest

---

apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: ClusterIP
  selector:
    tier: frontend
    type: dev
  ports:
  - name: node-app-port
    port: 80
    targetPort: 3000
