oc-nodejs-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    env: prod
    tier: front
spec:
  replicas: 10
  selector:
    matchLabels:
      tier: front
      type: qa
  template:
    metadata:
      labels:
        tier: front
        type: qa
    spec:
      containers:
        - name: node-app
          image: nirav8miles/node-app:v2

---
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  selector:
    tier: front
    type: qa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 300
  type: LoadBalancer
